Fixed workout title overflow

--- a/src/style.css
+++ b/src/style.css
@@ -104,12 +104,14 @@ header {
   align-items: center;
   position: relative;
 
+  width: 100%;
   height: 100%;
 
   color: rgb(84, 84, 236);
 }
 
 .workoutTitle>h2 {
+  max-width: 500px;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
@@ -247,6 +249,6 @@ header {
   }
 
   .workoutTitle>h2 {
-    max-width: 70vw;
+    max-width: 75vw;
   }
 }
